<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_add_task"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/create_an_account"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:layout_marginStart="24dp">
        <AutoCompleteTextView
            android:id="@+id/email_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_create_ET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center"
            android:hint="@string/username"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/acc_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:text="@string/sign_up"/>

    <TextView
        android:id="@+id/redirectmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/already_a_registered_user_signin"/>

</LinearLayout>
