<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="21dp"
    android:layout_marginBottom="7dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:alpha="0.7"
        android:elevation="10dp"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/task_row_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="21sp"
            android:padding="3dp"
            android:text="@string/task"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />
        
        <ImageButton
            android:id="@+id/image_row_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24"
            android:background="@color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/task_image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:cropToPadding="true"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">
            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/task_title_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textColor="@color/red"
            android:text="@string/task"
            android:padding="20dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/task_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/task_timestamp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_marginBottom="21dp"
            android:text="@string/date_created"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
